<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.franciscoandrade.button_challenge.view.TransferActivity">

    <include layout="@layout/action_toolbar_transfer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Current :"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/marginTwenty"/>

        <TextView
            android:id="@+id/totalTransfer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccentLight"
            android:text="100"
            android:textSize="@dimen/sixty_textSize"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTwenty"
        android:layout_marginTop="@dimen/marginTwenty"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/NoMargin"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginTwenty"
            android:layout_marginLeft="@dimen/marginTen"
            android:layout_marginRight="@dimen/marginTen"
            android:layout_weight="0.5"

            android:theme="@style/EditTextYellow">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amountTransfer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/amount_text"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/to_text"
            android:textSize="@dimen/textSizeBig" />

        <Spinner
            android:id="@+id/usersSpinner"
            android:layout_width="@dimen/NoMargin"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_text"
        android:theme="@style/RaisedButtonDark" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/marginTwenty"
        android:layout_marginLeft="@dimen/marginTen"
        android:layout_marginRight="@dimen/marginTen"
        android:layout_marginTop="@dimen/marginTwenty"
        android:background="@color/dark" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_history"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/NoMargin"
        android:layout_weight="1">

        <TextView
            android:id="@+id/historyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/textSizeBig" />
    </ScrollView>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:theme="@style/RaisedButtonDark" />

</LinearLayout>
